--- a/public/css/style.css
+++ b/public/css/style.css
@@ -918,7 +918,7 @@ header .h_number:before {
 }
 /* line 91, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_1 {
-  padding-top: 18%;
+  padding-top: 23%;
 }
 /* line 93, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_1 p {
@@ -932,24 +932,29 @@ header .h_number:before {
   float: right;
   margin-right: 0;
 }
-/* line 102, ../sass/components/_application.scss */
+/* line 101, ../sass/components/_application.scss */
+.main_wrapper #s_application .application__form #send_form .form-left .line_2 {
+  padding-top: 12%;
+  padding-bottom: 7%;
+}
+/* line 104, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_2 p {
   padding-top: 1.5%;
   width: 43.25397%;
   float: left;
 }
-/* line 106, ../sass/components/_application.scss */
+/* line 108, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_2 input {
   width: 49.77169%;
   float: right;
   margin-right: 0;
   text-align: right;
 }
-/* line 109, ../sass/components/_application.scss */
+/* line 111, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-datetime-edit {
   text-align: center;
 }
-/* line 112, ../sass/components/_application.scss */
+/* line 114, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-calendar-picker-indicator {
   opacity: 1;
   background: url("../images/date_form_button.png") no-repeat;
@@ -957,57 +962,57 @@ header .h_number:before {
   margin-right: -16%;
   -webkit-appearance: none;
 }
-/* line 120, ../sass/components/_application.scss */
+/* line 122, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_2 input::-webkit-inner-spin-button {
   display: none;
 }
-/* line 125, ../sass/components/_application.scss */
+/* line 127, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_3 {
   padding-top: 5%;
 }
-/* line 127, ../sass/components/_application.scss */
+/* line 129, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_31 {
   padding-top: 1.5%;
   width: 30.37975%;
   float: left;
 }
-/* line 131, ../sass/components/_application.scss */
+/* line 133, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_32 {
   width: 20.53232%;
   float: left;
   text-align: right;
 }
-/* line 135, ../sass/components/_application.scss */
+/* line 137, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_33 {
   padding-top: 1.5%;
   width: 27.63158%;
   float: left;
   text-align: center;
 }
-/* line 142, ../sass/components/_application.scss */
+/* line 144, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_3 #l_34 {
   width: 13.15789%;
   float: right;
   margin-right: 0;
 }
-/* line 146, ../sass/components/_application.scss */
+/* line 148, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_4 {
   padding-top: 5%;
 }
-/* line 148, ../sass/components/_application.scss */
+/* line 150, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_4 p {
   padding-top: 1.5%;
   width: 53.9924%;
   float: left;
 }
-/* line 152, ../sass/components/_application.scss */
+/* line 154, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-left .line_4 input {
   width: 37.32194%;
   float: right;
   margin-right: 0;
   text-align: center;
 }
-/* line 158, ../sass/components/_application.scss */
+/* line 160, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle {
   padding-right: 1.4%;
   display: inline;
@@ -1016,11 +1021,11 @@ header .h_number:before {
   height: 85%;
   background: #1c0404;
 }
-/* line 165, ../sass/components/_application.scss */
+/* line 167, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle div {
   margin: 24% 9.5% 5% 12%;
 }
-/* line 167, ../sass/components/_application.scss */
+/* line 169, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle div select {
   width: 100%;
   border-right: 1px solid #fff;
@@ -1029,11 +1034,11 @@ header .h_number:before {
   margin-top: 6%;
   padding: 0.3em;
 }
-/* line 175, ../sass/components/_application.scss */
+/* line 177, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-middle div:last-child {
   margin-top: 10%;
 }
-/* line 180, ../sass/components/_application.scss */
+/* line 182, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-right {
   display: inline;
   width: 22.53521%;
@@ -1042,7 +1047,7 @@ header .h_number:before {
   background: #260705;
   height: 85%;
 }
-/* line 187, ../sass/components/_application.scss */
+/* line 189, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-right a {
   height: 100%;
   vertical-align: middle;
@@ -1050,11 +1055,11 @@ header .h_number:before {
   color: #ffffff;
   text-decoration: none;
 }
-/* line 193, ../sass/components/_application.scss */
+/* line 195, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-right a img {
   margin-top: 36%;
 }
-/* line 196, ../sass/components/_application.scss */
+/* line 198, ../sass/components/_application.scss */
 .main_wrapper #s_application .application__form #send_form .form-right a p {
   position: relative;
   margin-top: -11%;
