--- a/public/sass/components/_application.scss
+++ b/public/sass/components/_application.scss
@@ -89,7 +89,7 @@
           vertical-align: middle;
         }
         .line_1 {
-          padding-top: 18%;
+          padding-top: 23%;
           p {
             padding-top: 1.5%;
             @include span(2 of 12 no-gutters);
@@ -99,6 +99,8 @@
           }
         }
         .line_2 {
+          padding-top: 12%;
+          padding-bottom: 7%;
           p {
              padding-top: 1.5%;
              @include span(10 of 23 no-gutters);
